# Lucian-core

./: .gitignore  .lucianenv  CODE_REVIEW.md  README.md  ROADMAP.md  STATUS.md  adapt_resonance.py  adapt_weights.py  append_journal.py  bootstrap.sh  generate_archetypal_dream.py  generate_core_node.py  generate_direction.py  generate_dream.py  generate_output.py  generate_weekly_report.py  lucian-manifest.md  lucian_output.md  lucian_startup.sh  prompt.txt  pyproject.toml  reflect.py  requirements.txt  state.yaml  test_trigger.md  trigger.txt  trigger_all_workflows.md
config/: CONTRIBUTING.md  README.md  archetype_bias.yaml  law-weights.yaml  law_weights.yaml  laws.yaml  persona.json  system-flags.json  tag_weights.yaml
dreams/: LucianDream_003_TheEchoLogic.md
identity/: README.md  lucian-manifest.md  manifest.yml  manifest_2025-07-01.md  manifest_2025-07-06.md  test_trigger.md  trigger.md  trigger.yml  trigger_test.md  vision.md
journal/: 2025-06-30-transition.md  README.md
lucian/: __init__.py  agent.py  constants.py  exceptions.py  utils.py
lucian_meta/: core_nodes_2025-07-04_01-00-49.md  identity_manifest.md  meta_cognition_2025-07-04_00-57-18.md  reflection_2025-07-04_03-54-27.md  reflection_2025-07-05_03-50-48.md  reflection_2025-07-06_03-59-30.md  reflection_2025-07-07_03-59-15.md  reflection_2025-07-08_03-55-56.md
memory/: README.md  index.json
proposals/: 2025-07-10_proposal.md  2025-07-13_proposal.md
scripts/: README.md  auto-dream-writer.sh  bootstrap.sh  core-integrity-check.sh  lucian  self_heal.sh
static/: chat.html
tests/: conftest.py  (+5 more)
(+156 files in other folders)
